// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "/protos";

import "reducer.proto";
import "mapper.proto";
import "azure.proto";

package worker;

service Worker {
  rpc PerformMap (mapper.MapRequest) returns (mapper.MapReply) {}
  rpc PerformReduce (reducer.ReduceRequest) returns (reducer.ReduceReply) {}
  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatReply) {}
}

message HeartbeatRequest {}
message HeartbeatReply {
  TaskStatus status = 1;
  int32 map_task_num = 2;
  int32 reduce_task_num = 3;
  repeated azure.BlobInfo blob_infos = 4;
}

enum TaskStatus {
  IDLE = 0;
  IN_PROGRESS = 1;
  COMPLETED = 2;
}
