// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "/protos";

package master;

import "azure.proto";

service Master {
  rpc MapperRegister (MapperInfo) returns (MapperRegisterReply) {}
  rpc Replicate(ReplicationRequest) returns (ReplicationReply) {}
}

message MapperInfo {
  string name = 1;
}

message MapperRegisterReply {
  bool success = 1;
}

message ReplicationRequest {
  int64 seq = 1;
  repeated ContainerRequest userRequestQueue = 2;
  WorkerPool workerPool = 3;
  TaskPool taskPool = 4;
}

message ReplicationReply {
  bool success = 1;
}

message ContainerRequest {
  string containerName = 1;
  int32 m = 2;
  int32 r = 3;
}

message WorkerPool {
  repeated string queue = 1;
  map<string, WorkerInfo> state = 2;
  repeated string deadWorkerQueue = 3;
}

message WorkerInfo {
  string address = 1;
  bool heartbeat = 2;
  int32 status = 3;
}

message TaskPool {
  map<int32, Task> mapTasks = 1;
  map<int32, Task> reduceTasks = 2;
  map<string, Task> activeTasks = 3;
}

message Task {
  int32 id = 1;
  repeated azure.BlobInfo input = 2;
  repeated azure.BlobInfo output = 3;
  int32 status = 4;
}

// protoc --go_out=. --go_opt=paths=source_relative \
//     --go-grpc_out=. --go-grpc_opt=paths=source_relative \
//     master.proto