// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "/protos";

package reducer;

import "azure.proto";

// The response message containing the user's name.
message ReduceReply {
    bool success = 1;
    int32 reduce_task_num = 2;
    azure.BlobInfo result_info = 3;
}

message ReduceRequest {
  int32 reduce_task_num = 1;
  repeated azure.BlobInfo key_value_infos = 2;
}

// protoc --go_out=. --go_opt=paths=source_relative \
//     --go-grpc_out=. --go-grpc_opt=paths=source_relative \
//     *.proto
